다국어 지원 개선: LanguageSwitcher 및 QuickStart 컴포넌트에서 언어 이름을 번역 기능으로 변경하고, TechSupport 컴포넌트의 언어 지원 제목 및 설명을 번역으로 업데이트하여 사용자 경험을 향상시킴. 번역 파일에 한국어 및 영어 추가.
Signed-off-by: anomie7 <anomie7777@gmail.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -273,5 +273,9 @@
     "loading": "Loading...",
     "copy": "Copy",
     "more": "+ More"
+  },
+  "languages": {
+    "ko": "한국어",
+    "en": "English"
   }
 }
