TechSupport 컴포넌트의 마무리 메시지를 HTML로 설정하여 코드 가독성을 향상시키고, 한국어 및 영어 번역 파일에서 해당 내용을 통합하여 일관성을 유지함.
Signed-off-by: anomie7 <anomie7777@gmail.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -112,13 +112,7 @@
         "smartContextTitle": "Smart Context Supported Languages",
         "generalContextTitle": "General Context Extraction Supported Languages",
         "generalContextSubtitle": "Supports general context extraction for major programming languages",
-        "conclusionPrefix": "Provides ",
-        "conclusionBold1": "excellent code review quality",
-        "conclusionMiddle": " in major programming languages through ",
-        "conclusionBold2": "general context extraction methods",
-        "conclusionMiddle2": ".<br />Smart Context supported languages are continuously ",
-        "conclusionBold3": "expanding",
-        "conclusionSuffix": "."
+        "conclusion": "Provides <strong>excellent code review quality</strong> in major programming languages through <strong>general context extraction methods</strong>.<br />Smart Context supported languages are continuously <strong>expanding</strong>."
       }
     },
     "aiModels": {
